# space-vision-py

./: .gitignore  README.md  environment.yaml  environment.yml  setup.py
applications/: CMakeLists.txt  vision_detection_app.cpp  vision_detection_app.py  vision_detection_app.yaml
applications/VideoRecognition/: .gitignore  CharacterRecognition.cpp  CharacterRecognition.h  Command.cpp  Command.h  Log.cpp  Log.h  Session.cpp  Session.h  VideoRecognition.cpp  VideoRecognition.vcxproj  VideoRecognition.vcxproj.filters  classifications.xml  commands.txt  images.xml
bindings/: CMakeLists.txt  vision_detection_lib.cpp  vision_detection_lib.h
bindings/robotframework/: vision_robot_server.py
recipe/: bld.bat  build.sh  meta.yaml
vision/: __init__.py
vision/applications/: vision_detection_app.py
vision/bindings/robotframework/: __init__.py  vision_robot_api.py  vision_robot_server.py  vision_robot_test.robot
